--- a/package.json
+++ b/package.json
@@ -7,14 +7,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "build:analyze": "ANALYZE=true next build",
-    "start": "next start",
-    "lint": "biome lint app lib components.json",
-    "lint:fix": "biome lint --write app lib components.json",
-    "format": "biome format app lib components.json",
-    "format:fix": "biome format --write app lib components.json",
-    "check": "biome check app lib components.json",
-    "check:fix": "biome check --write app lib components.json",
-    "prepare": "husky"
+    "start": "next start"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
@@ -51,7 +44,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "husky": "^9.1.7",
     "schema-dts": "^1.1.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
